<resources>
    <string name="app_name">MyApp</string>
    <string name="judul">MyApp</string>
    <string name="tLogin">L o g i n</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="bSignin">Sign-In</string>
    <string name="tData">A C C O U N T S</string>
    <string name="txemail">email</string>
    <string name="txpassword">password</string>
    <string name="txname">name</string>
    <string name="label2">Profile</string>
    <string name="tDaftar">Sign-Up</string>
    <string name="ldaftar">Registration</string>
    <string name="enama"> Name </string>
    <string name="eemail"> Email </string>
    <string name="epass"> Password</string>
    <string name="erepass"> Re-Password </string>
    <string name="ealamat"> Address </string>
    <string name="lihatdata">Details</string>
    <string name="lihatnomor">Number</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Contact</string>
    <string name="namaitem">Item</string>
    <string name="detailkontak">Detail</string>
    <string name="nama">Name</string>
    <string name="notel">Number</string>

</resources>